zonalManager filter and fs email

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Encore
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FqoHdOtjmiQAM+3nwBmidx3O7InlhBQFMaF4PQ2SgK0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=encore
+DB_USERNAME="root"
+DB_PASSWORD="your_password"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,14 +28,25 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#original
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailpit
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=mail.ehpl.net.in
+MAIL_PORT=465
+MAIL_USERNAME=webmaster@ehpl.net.in
+MAIL_PASSWORD=zfqKO48t&eu}
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="webmaster@ehpl.net.in"
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
