--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,14 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="sanmishaseosmo@gmail.com"
+MAIL_PASSWORD="ofrbedzoqtyjzmoj"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="sanmishaseosmo@gmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
