--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
+        "sendgrid/sendgrid": "^8.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-backup": "^8.3",
         "spatie/laravel-medialibrary": "*",
